Update index.html :: diary

--- a/practice/diary/index.html
+++ b/practice/diary/index.html
@@ -31,9 +31,21 @@
             <textarea placeholder="오늘의 비밀은 무엇인가요?" class="textarea"></textarea>
             <button type="submit">작성하기</button>
         </section>
-        <article class="main-diary">
+        <section class="main-diary">
+            <h2 class="a11y-hidden">일기 목록</h2>
+            <article >
+                <h3>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad, cumque modi eos minima architecto ex itaque doloremque? Voluptas aut magnam magni recusandae quibusdam tempora debitis deserunt itaque, dolorem vitae cum?
+                </h3>
+                <input type="time">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium quidem, eaque perferendis earum similique error cum maiores atque, tempora aperiam repudiandae qui quisquam aliquam. Dicta accusamus veniam sapiente? Optio, iusto?
+                    Dignissimos esse ut laboriosam labore? Rerum ex sint cupiditate atque! Inventore nam qui possimus aperiam facilis aliquam voluptate fuga nemo cupiditate molestias, enim commodi animi soluta rem vel tempora dicta.
+                    Id recusandae nobis error expedita iure vitae quasi provident incidunt vel, nemo eos. Dignissimos molestiae eius, architecto et expedita culpa iste optio illum dolor quos. Numquam quidem tenetur maiores illo!
+                </p>
+            </article>
             작성내용
-        </article>
+        </section>
     </main>
 </body>
 </html>
